# ARMHackathon

./: .gitattributes  .gitignore  APPLICATIONS.md  BASELINE_REPORT.md  BASELINE_TEST_PLAN.md  BIDIRECTIONAL_LOG.md  BIDIRECTIONAL_SPEEDUP_IDEAS.md  CLAUDE.md  IMPROVEMENT_IDEAS.md  INTEGRATION_PLAN.md  LICENSE  MAMBA2_SSD_PLAN.md  MAMBA3_KERNEL_PLAN.md  MAMBA_DIFFUSION_MRI_PLAN.md  MRI_DIFFUSION_IMPLEMENTATION_PLAN.md  Makefile  OPTIMIZATION_LOG.md  PROFILING.md  PROFILING_EXPLAINED.md  PROJECT_CONCEPT.md  README.md  RESEARCH_TRIAGE_MAMBA2_2D.md  ROADMAP.md  SS2D_REPOSITIONING_PLAN.md  TOPOLOGY_IMPLEMENTATION_PLAN.md  requirements-dev.txt  requirements.txt  sync.ps1
.github/workflows/: bench-baseline.yml  ci.yml  profile.yml
apps/mri_diffusion/: PHASE_A_FINDINGS.md
apps/mri_diffusion/backbone/: mamba_ss2d.py  torch_scan.py
bench/: ARM_BASELINE.md  README.md  bench_bidirectional.py  bench_e2e.py  bench_op.py  bench_ss2d.py  render_results.py  run_baseline.sh  setup_ampere.sh  smoke_topologies.py
bench/profile/: dump_asm.sh  perf_ampere.sh  run_profile.sh
bench/results/: RESULTS.md  RESULTS_ci-arm64.md  criterion_windows-i9.txt  e2e_p128_windows-i9.json  e2e_p2048_windows-i9.json  e2e_p512_windows-i9.json  op_basic_windows-i9.json  op_scaling_windows-i9_t1.json  op_scaling_windows-i9_t16.json  op_scaling_windows-i9_t2.json  op_scaling_windows-i9_t32.json  op_scaling_windows-i9_t4.json  op_scaling_windows-i9_t8.json  op_sweep-batch_windows-i9.json  op_sweep-dim_windows-i9.json  op_sweep-len_windows-i9.json  ss2d_windows-i9.json
kernel/: Cargo.toml
kernel/arm-scan-core/: Cargo.toml
kernel/arm-scan-core/benches/: scan.rs
kernel/arm-scan-core/examples/: profile_phases.rs
kernel/arm-scan-core/src/: float.rs  lib.rs  parallel.rs  scalar.rs
kernel/arm-scan-core/src/neon/: exp.rs  math.rs  mod.rs  profile.rs
kernel/arm-scan-core/tests/: golden.rs  property.rs
kernel/arm-scan-ffi/: Cargo.toml
python/: README.md  pyproject.toml  setup.py
python/arm_scan/: __init__.py  _ffi.py  bidirectional.py  numpy_api.py  op.py  patch.py  ss2d.py
scripts/: build_wheel.py
tests/: README.md  check_bidirectional.py  check_bidirectional_math.py  check_ffi.py  check_hf_patch.py  check_hf_slow_path.py  gen_golden.py  verify_golden.py
tests/golden/: channels.npz  edge_D1.npz  edge_L1.npz  extreme_delta.npz  grouped_BC.npz  hf_mixer_layer0.npz  long_seq.npz  manifest.json  medium.npz  no_D.npz  no_bias.npz  no_softplus.npz  no_z.npz  small.npz  state13_neon_tail.npz  state8.npz  tiny.npz
tests/reference/: __init__.py  selective_scan_ref.py  ssd_minimal_ref.py
(+5 files in other folders)
