[package]
name = "arm-scan-core"
description = "Arm-optimized Mamba selective-scan kernel (core library)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# The kernel's only dependency is rayon, and it is optional.
[features]
default = ["parallel"]
parallel = ["dep:rayon"]
# Diagnostic phase-level profiler (aarch64 only). Never enabled in a shipping
# build; see PROFILING.md. Exposes `scan_profiled` / `PhaseTimings`.
profiling = []

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
ndarray = "0.16"
ndarray-npy = { version = "0.9", features = ["npz"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "scan"
harness = false
